syntax = "proto3";

package delivery;

option go_package = ".;delivery";

message CreateDeliveryRequest {
  uint32 order_id = 1;
  uint32 rider_id = 2;
}

message UpdateDeliveryStatusRequest {
  uint32 delivery_id = 1;
  string delivery_status = 2;
}

message Delivery {
  uint32 id = 1;
  uint32 order_id = 2;
  uint32 rider_id = 3;
  string status = 4;
}

message CreateDeliveryResponse {
  Delivery delivery = 1;
}

message UpdateDeliveryStatusResponse {
  Delivery delivery = 1;
}

service DeliveryService {
  rpc CreateDelivery(CreateDeliveryRequest) returns (CreateDeliveryResponse);
  rpc UpdateDeliveryStatus(UpdateDeliveryStatusRequest) returns (UpdateDeliveryStatusResponse);
}